--- a/src/main/resources/com/example/demo/starred_content.fxml
+++ b/src/main/resources/com/example/demo/starred_content.fxml
@@ -5,94 +5,41 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox spacing="18"
-      xmlns="http://javafx.com/javafx/17.0.12"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.demo.controller.StarredController"
-      stylesheets="@css/starred.css"
-      style="-fx-background-color: #F2F2F2;">
+<VBox spacing="20" style="-fx-background-color: #F4F6F8;" stylesheets="@css/starred.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.controller.StarredController"> <padding>
+    <Insets bottom="20" left="30" right="30" top="20" />
+</padding>
 
-    <padding>
-        <Insets top="0" right="0" bottom="20" left="10"/>
-    </padding>
+    <HBox alignment="CENTER_LEFT" spacing="20">
+        <Label style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #212B36;" text="Starred Files" />
 
-    <!-- ================= HEADER ================= -->
-    <HBox alignment="CENTER">
-        <HBox alignment="CENTER_LEFT"
-              prefHeight="70.0" prefWidth="1000.0"
-              spacing="25"
-              style="-fx-background-color: #FFFFFF; -fx-background-radius: 5;">
-            <padding>
-                <Insets bottom="15" left="15" right="25" top="15"/>
-            </padding>
+        <Region HBox.hgrow="ALWAYS" />
 
-            <Region HBox.hgrow="ALWAYS"/>
-
-            <HBox prefWidth="800">
-                <TextField fx:id="searchField"
-                           prefHeight="40" prefWidth="750.0"
-                           promptText="Search"
-                           style="-fx-background-radius: 10; -fx-padding: 8;"/>
-            </HBox>
-
-            <ImageView fitHeight="20" fitWidth="20">
-                <image><Image url="@imgs/bell.png"/></image>
-            </ImageView>
-
-            <ImageView fitHeight="25" fitWidth="25">
-                <image><Image url="@imgs/man.png"/></image>
-            </ImageView>
+        <HBox alignment="CENTER_LEFT" style="-fx-background-color: #FFFFFF; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 3, 0, 0, 1);">
+            <padding><Insets bottom="5" left="15" right="10" top="5" /></padding>
+            <ImageView fitHeight="18" fitWidth="18" opacity="0.5">
+                <image><Image url="@imgs/folder.png" /></image> </ImageView>
+            <TextField fx:id="searchField" prefHeight="35" prefWidth="798.0" promptText="Search files..." style="-fx-background-color: transparent; -fx-prompt-text-fill: #919EAB; -fx-text-fill: #212B36;" />
         </HBox>
+
+        <ImageView fitHeight="40" fitWidth="40">
+            <image><Image url="@imgs/man.png" /></image>
+        </ImageView>
     </HBox>
 
-    <!-- ================= TITLE ================= -->
-    <HBox alignment="CENTER">
-        <HBox alignment="CENTER_LEFT"
-              prefWidth="1000.0"
-              spacing="10">
-            <padding>
-                <Insets bottom="15" left="1" right="25" top="0"/>
-            </padding>
+    <Separator opacity="0.5" />
 
-            <Label text="Starred" style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
-            <Region HBox.hgrow="ALWAYS"/>
-        </HBox>
-    </HBox>
+    <GridPane styleClass="table-header">
+        <columnConstraints>
+            <ColumnConstraints percentWidth="50" /> <ColumnConstraints percentWidth="20" /> <ColumnConstraints percentWidth="15" /> <ColumnConstraints halignment="CENTER" percentWidth="15" /> </columnConstraints>
 
-    <!-- GẠCH NGANG PHÂN CÁCH -->
-    <Separator prefWidth="1000">
-        <style>
-            -fx-background-color: #D0D0D0;
-        </style>
-    </Separator>
+        <Label text="NAME" GridPane.columnIndex="0" />
+        <Label text="OWNER" GridPane.columnIndex="1" />
+        <Label text="SIZE" GridPane.columnIndex="2" />
+        <Label text="ACTION" GridPane.columnIndex="3" />
+      <rowConstraints>
+         <RowConstraints />
+      </rowConstraints>
+    </GridPane>
 
-    <!-- ================= BẢNG DỮ LIỆU ================= -->
-    <HBox alignment="CENTER">
-        <VBox alignment="CENTER" prefWidth="1000" spacing="15">
-
-            <!-- HEADER CỘT -->
-            <GridPane prefWidth="1000"
-                      styleClass="table-header"
-                      style="-fx-background-color: #FFFFFF;">
-                <columnConstraints>
-                    <ColumnConstraints prefWidth="550"/>
-                    <ColumnConstraints prefWidth="140"/>
-                    <ColumnConstraints prefWidth="100"/>
-                    <ColumnConstraints prefWidth="120"/>
-                </columnConstraints>
-
-                <Label styleClass="th" text="Name"/>
-                <Label styleClass="th" text="Owner" GridPane.columnIndex="1"/>
-                <Label styleClass="th" text="File Size" GridPane.columnIndex="2"/>
-                <Label styleClass="th" text="File Location" GridPane.columnIndex="3"/>
-            </GridPane>
-
-            <!-- DANH SÁCH FILE -->
-            <ListView fx:id="fileListView"
-                      prefWidth="1000"
-                      styleClass="flat-list"
-                      focusTraversable="false"
-                      VBox.vgrow="NEVER"/>
-        </VBox>
-    </HBox>
+    <ListView fx:id="fileListView" styleClass="flat-list" VBox.vgrow="ALWAYS" />
 </VBox>
